# NMiner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  index.d.ts  index.js  index.ts  package.json  test.js  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: build.yml  c-cpp.yml
3dparty/: CMakeLists.txt
src/: main.cpp  main.h
src/algo/randomx/: aes_hash.cpp  aes_hash_rv64_vector.cpp  aes_hash_rv64_zvkned.cpp  aes_hash_vaes512.cpp  allocator.cpp  blake2_generator.cpp  bytecode_machine.cpp  bytecode_machine.hpp  common.hpp  dataset.cpp  dataset.hpp  instruction.hpp  intrin_portable.h  jit_compiler.hpp  jit_compiler_a64.cpp  jit_compiler_a64.hpp  jit_compiler_a64_static.S  jit_compiler_fallback.cpp  jit_compiler_fallback.hpp  jit_compiler_rv64.cpp  jit_compiler_rv64.hpp  jit_compiler_rv64_vector.cpp  jit_compiler_rv64_vector.h  jit_compiler_x86.cpp  jit_compiler_x86.hpp  randomx.cmake  randomx.cpp  randomx.h  reciprocal.c  rx.cpp  rx.h  rx_job.cpp  rx_job.h  rx_worker.cpp  rx_worker.h  soft_aes.cpp  soft_aes.h  superscalar.cpp  superscalar.hpp  superscalar_program.hpp  (+11 more)
src/algo/randomx/blake2/: blake2-impl.h  blake2.h  blake2b.c
src/cpp/: job.cpp  job.h  n-api.h
src/crypto/: Job.cpp  Job.h
src/js/: connect.js  connect.ts  crypto.ts  log.js  log.ts  logger.ts  miner.d.ts  miner.js  pool.js  topology.ts  utils.ts
